2002-10-11  Gary Thomas  <gary@mlbassoc.com>

	* src/if_fec.c: 
	* cdl/fec_eth_drivers.cdl: Add control over PHY - when to reset
	and how to configure the link.

2002-09-19  Gary Thomas  <gary@mlbassoc.com>

	* src/if_fec.c (fec_eth_init): Check for availability of RedBoot
	FLASH support.

2002-09-03  Gary Thomas  <gary@mlbassoc.com>

	* src/if_fec.c: Make driver more generic - platform specifics are
	now contained in an include file CYGDAT_DEVS_FEC_ETH_INL.

2002-08-15  Gary Thomas  <gthomas@ecoscentric.com>

	* src/if_fec.c (fec_eth_send): 
	Clean up: remove unused variable _fec_eth_tx_count.

2002-08-08  Gary Thomas  <gthomas@ecoscentric.com>

	* src/if_fec.c (fec_eth_RxEvent): Cache needs to be invalidated
	to avoid any possible corruption.

2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/if_fec.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2002-05-30  Jonathan Larmour  <jlarmour@redhat.com>

	* src/if_fec.c: Use CYGINT_IO_ETH_INT_SUPPORT_REQUIRED where
        appropriate.

2002-05-30  Jesper Skov  <jskov@redhat.com>

	* src/if_fec.c: Initialized a variable and removed an unused
	variable. Also made one volatile. All to remove warnings.
	* src/fec.h: Made more pointers volatile to avoid compiler
	warnings.

2002-04-30  Nick Garnett  <nickg@redhat.com>

	* src/if_fec.c: Changed order of initialization and made code more
	robust against hangups. Changed initialization of ESA from memcpy
	to 32 bit assignments, since 855 seems fussy about this where 860
	is not.

2002-04-22  Gary Thomas  <gthomas@redhat.com>

	* src/if_fec.c (fec_eth_control): Fix compile error (multicast).

2002-04-19  Gary Thomas  <gthomas@redhat.com>

	* cdl/fec_eth_drivers.cdl: Add [minimal] multicast support.

	* src/if_fec.c: Cleaned out debug code.

2002-04-18  Gary Thomas  <gthomas@redhat.com>

	* src/if_fec.c: Finally working!  Problem was that resetting the